--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,16 +2,32 @@ div {
   border: black solid 2px;
   width: 100%;
   border-radius: 5px;
+}
+
+.header {
   text-align: center;
   font-size: 2.5em;
   font-family: Palatino, "Palatino Linotype";
   background-color: #b3daff;
 }
 
+.container {
+  background-color: #00b8e6;
+}
+
+.story {
+  background-color: #e6ffff;
+}
+
 section {
   font-family: Palatino, "Palatino Linotype";
   font-size: 1em;
   color: black;
+  display: none;
+}
+
+section:target {
+  display: block;
 }
 
 a {
@@ -22,4 +38,9 @@ a {
 a:hover {
   text-decoration: underline;
   color: #999999;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #4d4d4d;
 }
