--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,13 +12,15 @@ div {
 }
 
 .container {
-  background-color: #00b8e6;
+  background-color: #66b3ff;
   width: 100%;
+  height: 100%;
 }
 
 .story {
   background-color: #e6ffff;
   width: 75%;
+  height: 90%;
   margin: auto;
   padding: 20px 50px 20px 50px;
 }
