--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,10 @@
 div {
-  border: black solid 2px;
   width: 100%;
   border-radius: 5px;
 }
 
 .header {
+  border: black solid 2px;
   text-align: center;
   font-size: 2.5em;
   font-family: Palatino, "Palatino Linotype";
@@ -12,12 +12,14 @@ div {
 }
 
 .container {
-  background-color: #66b3ff;
+  border: none;
+  background-color: #b3e6ff;
   width: 100%;
   height: 100%;
 }
 
 .story {
+  border: none;
   background-color: #e6ffff;
   width: 75%;
   height: 90%;
